# real-time-fraud-detection

./: .gitignore  kagglehub.ipynb  pyproject.toml
src/frauddetect/models/: base.py
src/frauddetect/simulator/: __init__.py  base.py  kaggle.py
src/frauddetect/simulator/downloader/: __init__.py  base.py  kaggle.py
src/frauddetect/simulator/iterator/: __init__.py  base.py  kaggle.py
tests/: __init__.py
tests/dowloader/: test_downloader.py
tests/iterator/: test_iterator.py
