[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frauddetect"
version = "0.1.0"
description = "Real-time fraud detect api based on river"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["online-ml", "fraud", "credit"]
authors = [
  {name = "Caio Gimenes", email = "ciaonemegi@gmail.com"}
]
maintainers = [
  {name = "Caio Gimenes", email = "ciaonemegi@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "river",
    "kagglehub",
    "pandas",
    'tomli; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/caiogimenes/real-time-fraud-detection"
BugTracker = "https://github.com/caiogimenes/real-time-fraud-detection/issues"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = ["frauddetect[test]"]